# 3d-render

./: .gitignore  CMakeLists.txt  README.md
include/: 3d_structs.h  buffer.hpp  camera.hpp  file_obj.h  math.hpp  matrix.hpp  object.hpp  quaternion.hpp  rendering.h  term_tweaks.h  terminal.hpp  termios_init.h  vector2.hpp  vector3.hpp  vector4.hpp
src/: 3d_structs.c  buffer.cpp  camera.cpp  file_obj.c  main.c  main.cpp  math.cpp  matrix.cpp  object.cpp  quaternion.cpp  rendering.c  term_tweaks.c  terminal.cpp  termios_init.c  vector2.cpp  vector3.cpp  vector4.cpp
src/3d_structs/: addition.c  convertation.c  division.c  multiplication.c  substraction.c
